deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zad2-chmury
  name: zad2-chmury
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
  selector:
    matchLabels:
      app: zad2-chmury
  template:
    metadata:
      labels:
        app: zad2-chmury
    spec:
      containers:
      - name: zad2-chmury
        image: it02nowakowski/zad2_chmury:1.1
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        resources: {}
