service.yml
apiVersion: v1
kind: Service
metadata:
  name: zad2-chmury
spec:
  type: NodePort
  selector:
    app: zad2-chmury
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
